[package]
name = "esp32c3-rust-test0"
version = "0.1.1"
edition = "2021"

[dependencies]
esp32c3-hal = { version = "0.12.0", features = [ "embassy-time-timg0" ] }
esp-println = { version = "0.6.0", features = [  "log", "esp32c3" ] }
esp-backtrace = { version = "0.8.0", features = ["esp32c3", "panic-handler", "exception-handler", "print-uart"] }
esp-alloc = { version = "0.3.0" }

#log = "0.4.17, <0.4.19" # using <0.4.19, as the more versions require atomics for ptr to be available ... which we don't have in imc!
log = "0.4"

#portable-atomic = { version = "1", default-features = false, features = [] }
#portable-atomic = { version = "1.1.2", optional = true }
#atomic-waker = "1" # we have to include it here, so we can activate the `portable-atomic` feature, because esp32c3-hal fails to do so ... even though it should know we are using imc and not imac

#embassy-time = { version = "0.1.3", features = ["nightly"] }
#embedded-svc = { version = "0.26.0", default-features = false, features = [] }
esp-wifi = { git = "https://github.com/esp-rs/esp-wifi.git", version = "0.1.0", default-features = false, features = [ "esp32c3", "wifi", "ipv6", "utils", "async", "log" ] }


smoltcp = { version = "0.10.0", default-features=false, features = ["proto-igmp", "proto-ipv4", "socket-tcp", "socket-icmp", "socket-udp", "medium-ethernet", "proto-dhcpv4", "socket-raw", "socket-dhcpv4"] }
embedded-svc = { version = "0.25.0", default-features = false, features = [] }
embedded-io = "0.4.0"
heapless = { version = "0.7.14", default-features = false }

[features]
#default = ["rt"]
#default = ["rt", "esp32c3"]
default = [ "esp32c3" ]
#rt = ["riscv-rt"]
#esp32c3 = [ "esp-wifi/esp32c3", "atomic-waker/portable-atomics" ]
#esp32c3 = [ "esp-wifi/esp32c3", "atomic-waker/portable-atomic", "portable-atomic" ]
esp32c3 = [ "esp-wifi/esp32c3", ]

board-QtPyC3 = []
board-Esp32C3DevKitC02 = []
